fixed scrollbar bg

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,10 @@ body {
   background-color: var(--md-sys-color-surface-variant);
 }
 
+::-webkit-scrollbar-track{
+  background-color: var(--md-sys-color-surface-container);
+}
+
 h2,
 h3,
 p {
